<resources>
    <string name="app_name">TFG-AplicacionGastos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_start">Inicio</string>
    <string name="menu_category">Categorías</string>
    <string name="menu_graphs">Gráficos</string>
    <string name="menu_habitualPayments">Pagos Habituales</string>
    <string name="menu_settings">Ajustes\n</string>
    <string name="Color">color</string>
    <string name="Add">Añadir Categoria</string>
    <string name="add_category">Añadir Categoria</string>
    <string name="name">Nombre</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
</resources>