<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_start" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_graph"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_graphs" />
        <item
            android:id="@+id/nav_habitualPayments"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_habitualPayments" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>
</menu>