<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.category.CreateCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <RadioGroup
            android:id="@+id/radioButtonGroupCategoryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gastos" />

            <RadioButton
                android:id="@+id/radioButtonIngresos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresos" />
        </RadioGroup>

        <Button
            android:id="@+id/colorPickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Color" />

        <!-- Una vista para mostrar el color seleccionado -->
        <View
            android:id="@+id/colorDisplayView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF" />

    </LinearLayout>

</FrameLayout>